--- a/_tweets-md/2012/2012-02-01-tweets.md
+++ b/_tweets-md/2012/2012-02-01-tweets.md
@@ -1,85 +1,91 @@
+---    
+title: "Social Media - February"
+date: "2012-02-29"
+time: 23:59:59 +0000
+---
+
 > Any Mac or iPhone user will 'resonate' with this video by @chriscrutch "Digitals": [http://bit.ly/x1hmRR](http://bit.ly/x1hmRR)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Feb 01 17:44:56 +0000 2012](https://twitter.com/ChristopherA/status/164766193570422784)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 01 17:44:56 +0000 2012](https://twitter.com/ChristopherA/status/164766193570422784)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/over2jameson/status/164444706682568705)
+
 
 > Winner of the Christopher Allen look-alike contest — Jonathan Frakes ;-) 
 > 
-> ![](../../media/164772162278920192-Akg5ludCAAE4rrd.jpg) via @joverbeck
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/164772162278920192-Akg5ludCAAE4rrd.jpg) via @joverbeck
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Feb 01 18:08:39 +0000 2012](https://twitter.com/ChristopherA/status/164772162278920192)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 01 18:08:39 +0000 2012](https://twitter.com/ChristopherA/status/164772162278920192)
 
 ----
 
 > Quote of the day: "Tell me and I forget. Teach me and I remember. Involve me and I learn."—Benjamin Franklin 1706-1790 #howweteach #qotd
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Feb 01 18:12:51 +0000 2012](https://twitter.com/ChristopherA/status/164773217712607232)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 01 18:12:51 +0000 2012](https://twitter.com/ChristopherA/status/164773217712607232)
 
 ----
 
 > Arrived in Seattle, heading to Bainbridge Island for Sustainable MBA Intensive at @BGIedu. Not teaching this weekend—working with faculty.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Feb 09 17:12:57 +0000 2012](https://twitter.com/ChristopherA/status/167657247776833536)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 09 17:12:57 +0000 2012](https://twitter.com/ChristopherA/status/167657247776833536)
 
 ----
 
 > RT @NancyWhite: #Seattle folks. Write UW to tell them to SHARE. End new restrictive IP rules  See [http://bit.ly/xSAxBL](http://bit.ly/xSAxBL)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 10 05:14:04 +0000 2012](https://twitter.com/ChristopherA/status/167838723613003777)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 10 05:14:04 +0000 2012](https://twitter.com/ChristopherA/status/167838723613003777)
 
 ----
 
 > Very interesting! "the way networks create contagion among potential buyers" [http://bit.ly/AERKEu](http://bit.ly/AERKEu) by @ron_burt via @orgnet
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 10 05:19:18 +0000 2012](https://twitter.com/ChristopherA/status/167840039970156545)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 10 05:19:18 +0000 2012](https://twitter.com/ChristopherA/status/167840039970156545)
 
 ----
 
 > I read an early draft of @schneierblog new book "Liars & Outliers". I highly recommend it—not just for security folk: [http://amzn.to/zBdqWM](http://amzn.to/zBdqWM)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 17 01:33:24 +0000 2012](https://twitter.com/ChristopherA/status/170319903486783488)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 17 01:33:24 +0000 2012](https://twitter.com/ChristopherA/status/170319903486783488)
 
 ----
 
 > Here is a review in Forbes magazine of @schneierblog's new book about trust "Liars & Outliers" [http://onforb.es/AclCN7](http://onforb.es/AclCN7)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 17 01:37:45 +0000 2012](https://twitter.com/ChristopherA/status/170320999970115584)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 17 01:37:45 +0000 2012](https://twitter.com/ChristopherA/status/170320999970115584)
 
 ----
 
 > [or even poisonous] RT @bajshagirl: Really wishes people would consider the amount of perfume they apply prior to flying. #migraineinducing
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 17 02:19:14 +0000 2012](https://twitter.com/ChristopherA/status/170331441706700800)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 17 02:19:14 +0000 2012](https://twitter.com/ChristopherA/status/170331441706700800)
 
 ----
 
 > RT @PatrickRuffini: Privacy is dead not because private data will be exposed but because of what can be inferred in from analysis of you ...
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 17 06:08:32 +0000 2012](https://twitter.com/ChristopherA/status/170389143073996800)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 17 06:08:32 +0000 2012](https://twitter.com/ChristopherA/status/170389143073996800)
 
 ----
 
 > It is 77 degrees on a beautiful late February afternoon in North Berkeley. We have summers colder than that here. #GlobalWarming ?
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 24 00:15:44 +0000 2012](https://twitter.com/ChristopherA/status/172837076495110147)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 24 00:15:44 +0000 2012](https://twitter.com/ChristopherA/status/172837076495110147)
 
 ----
 
 > RT @HeartIQ: Wonderful TEDx talk by Winston Dong. "Design as Activism: Help Me Design The World We Want To Live In." [http://youtu.be/0knwWB7ZNr4](http://youtu.be/0knwWB7ZNr4)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Feb 26 05:18:06 +0000 2012](https://twitter.com/ChristopherA/status/173637945499189249)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 26 05:18:06 +0000 2012](https://twitter.com/ChristopherA/status/173637945499189249)
 
 ----
 
 > Got an email from AT&T that they will throttle my Unlimited Data plan. I expect to be at SXSW next month—I will sue: [http://bit.ly/wMEc0E](http://bit.ly/wMEc0E)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Feb 28 06:28:11 +0000 2012](https://twitter.com/ChristopherA/status/174380357569871873)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 28 06:28:11 +0000 2012](https://twitter.com/ChristopherA/status/174380357569871873)
 
 ----
 
 > 31 films that will be at #SXSW were financed by Kickstarter. It is becoming the 21st-century form of Art Patronage: [http://kck.st/zHCx5j](http://kck.st/zHCx5j)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Feb 28 07:20:19 +0000 2012](https://twitter.com/ChristopherA/status/174393475930914816)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 28 07:20:19 +0000 2012](https://twitter.com/ChristopherA/status/174393475930914816)
