--- a/_tweets-md/2012/2012-07-01-tweets.md
+++ b/_tweets-md/2012/2012-07-01-tweets.md
@@ -1,144 +1,150 @@
+---    
+title: "Social Media - July"
+date: "2012-07-31"
+time: 23:59:59 +0000
+---
+
 > eBay’s "Women in Tech" group is sponsoring free passes to #iOSDevCamp for women who enjoy coding or designing iOS apps: [http://bit.ly/N40IUF](http://bit.ly/N40IUF)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 06 20:07:21 +0000 2012](https://twitter.com/ChristopherA/status/221334542324211713)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 06 20:07:21 +0000 2012](https://twitter.com/ChristopherA/status/221334542324211713)
 
 ----
 
 > I'm an advisor to Trash Backwards “Mashup of Freecycle + Pinterest” [http://an.gl/Nd90eG](http://an.gl/Nd90eG) /cc @trashbackwards @angellist
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 06 21:05:23 +0000 2012](https://twitter.com/ChristopherA/status/221349146299346944)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 06 21:05:23 +0000 2012](https://twitter.com/ChristopherA/status/221349146299346944)
 
 ----
 
 > I signed the #NetDeclaration. Join me in asking Congress to protect a free &amp; uncensored Internet: [https://eff.org/r.1aes](https://eff.org/r.1aes) #eff #socialjustice
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 06 21:10:43 +0000 2012](https://twitter.com/ChristopherA/status/221350487457402882)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 06 21:10:43 +0000 2012](https://twitter.com/ChristopherA/status/221350487457402882)
 
 ----
 
 > More details on our Scholarships for Women at #iOSDevCamp on July 20th. We are also seeking women for panel or keynote [http://bit.ly/Nup5eJ](http://bit.ly/Nup5eJ)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 07 01:14:38 +0000 2012](https://twitter.com/ChristopherA/status/221411870198857729)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 07 01:14:38 +0000 2012](https://twitter.com/ChristopherA/status/221411870198857729)
 
 ----
 
 > I'm seeking someone to create a tribute to HyperCard in time for it's 25th anniversary on Aug 11th, using our @InfiniteCanvas iPad app.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 07 01:22:02 +0000 2012](https://twitter.com/ChristopherA/status/221413734155956225)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 07 01:22:02 +0000 2012](https://twitter.com/ChristopherA/status/221413734155956225)
 
 ----
 
 > #qotd"Destiny is not a matter of chance; it is a matter of choice—It is not a thing to be waited for; it is a thing to be achieved"—WJ Bryan
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 10 04:07:05 +0000 2012](https://twitter.com/ChristopherA/status/222542433861386240)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 10 04:07:05 +0000 2012](https://twitter.com/ChristopherA/status/222542433861386240)
 
 ----
 
 > I like this free 'Photo Mapo' iPhone app—it creates a map from your photo location and adds your photo and note on top: [http://bit.ly/LQSGOI](http://bit.ly/LQSGOI)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 12 06:58:30 +0000 2012](https://twitter.com/ChristopherA/status/223310347963072513)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 12 06:58:30 +0000 2012](https://twitter.com/ChristopherA/status/223310347963072513)
 
 ----
 
 > Sign this Whitehouse e-petition to require the TSA to follow the law about reporting on scanner efficacy &amp; health risks [http://wh.gov/OBth](http://wh.gov/OBth)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 12 07:34:21 +0000 2012](https://twitter.com/ChristopherA/status/223319368942100480)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 12 07:34:21 +0000 2012](https://twitter.com/ChristopherA/status/223319368942100480)
 
 ----
 
 > Heading to San Diego's ComicCon #sdcc this morning to meet artists &amp; promote our upcoming @InfiniteCanvas iPad app [http://www.InfiniteCanvasApp.com](http://www.InfiniteCanvasApp.com)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 13 13:15:08 +0000 2012](https://twitter.com/ChristopherA/status/223767516676227072)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 13 13:15:08 +0000 2012](https://twitter.com/ChristopherA/status/223767516676227072)
 
 ----
 
 > I am seeking beta testers to help us for the next two weeks to test the new authoring features of @InfiniteCanvas app for the iPad.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 15 17:35:29 +0000 2012](https://twitter.com/ChristopherA/status/224557812754284544)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 15 17:35:29 +0000 2012](https://twitter.com/ChristopherA/status/224557812754284544)
 
 ----
 
 > It is not too late to signup for this weekend's #iOSDevCamp in San Jose—Hackathon Show is free on Sunday at 2pm @ 2161 N 1st Street San Jose
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 19 17:42:12 +0000 2012](https://twitter.com/ChristopherA/status/226009056983252992)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 19 17:42:12 +0000 2012](https://twitter.com/ChristopherA/status/226009056983252992)
 
 ----
 
 > Some people at #iOSDevCamp have expressed an interest in #location #privacy — here is my Ephemeral Locality Service [http://bit.ly/LDMWeK](http://bit.ly/LDMWeK)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 21 04:13:15 +0000 2012](https://twitter.com/ChristopherA/status/226530250148966400)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 21 04:13:15 +0000 2012](https://twitter.com/ChristopherA/status/226530250148966400)
 
 ----
 
 > RT @KickFlipit: How many iDevices does one developer need?  Brad from @viame #iosDevCamp #aarong 
 > 
-> ![](../../media/226783079761580032-AyWl01lCcAEzo0q.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/226783079761580032-AyWl01lCcAEzo0q.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 21 20:57:54 +0000 2012](https://twitter.com/ChristopherA/status/226783079761580032)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 21 20:57:54 +0000 2012](https://twitter.com/ChristopherA/status/226783079761580032)
 
 ----
 
 > If you want to see what I've been up to today, search for #iosdevcamp on twitter, flickr, etc. A busy day, great iOS apps expected tomorrow!
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 22 05:23:16 +0000 2012](https://twitter.com/ChristopherA/status/226910261351690240)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 22 05:23:16 +0000 2012](https://twitter.com/ChristopherA/status/226910261351690240)
 
 ----
 
 > Late night coding at hotel after #iOSDevCamp closes for evening. Suite hosted by #viame, successful alumni of the camp. [http://twitpic.com/aadyss](http://twitpic.com/aadyss)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 22 06:58:57 +0000 2012](https://twitter.com/ChristopherA/status/226934338141450241)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 22 06:58:57 +0000 2012](https://twitter.com/ChristopherA/status/226934338141450241)
 
 ----
 
 > The #hackathon submission page for #iOSDevCamp is now available at [http://bit.ly/iosdevcamp2012submithack—you](http://bit.ly/iosdevcamp2012submithack—you) must submit your entry by 12pm PDT to enter!
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 22 15:48:14 +0000 2012](https://twitter.com/ChristopherA/status/227067536825524225)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 22 15:48:14 +0000 2012](https://twitter.com/ChristopherA/status/227067536825524225)
 
 ----
 
 > iOS Dev Camp 2012 Hackathon &amp; Awards open and free to the public @ 2pm. Join us! eBay Town Hall, 2161 N 1st Street, San Jose, CA #iOSDevCamp
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 22 18:35:29 +0000 2012](https://twitter.com/ChristopherA/status/227109628876574720)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 22 18:35:29 +0000 2012](https://twitter.com/ChristopherA/status/227109628876574720)
 
 ----
 
 > - @banane @staciehibino it is not a booby prize, but a celebration of effort! Freedom to fail is important! #iosdevcamp [http://bit.ly/Miezqp](http://bit.ly/Miezqp)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 23 04:43:19 +0000 2012](https://twitter.com/ChristopherA/status/227262593973231616)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 23 04:43:19 +0000 2012](https://twitter.com/ChristopherA/status/227262593973231616)
 
 ----
 
 > I had a great time hosting #iosDevCamp — many thanks to my co-founders @Dom, @Ravenme &amp; new event mgr @DangerAngel [http://flic.kr/p/cBJXXN](http://flic.kr/p/cBJXXN)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 23 05:51:50 +0000 2012](https://twitter.com/ChristopherA/status/227279835851014144)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 23 05:51:50 +0000 2012](https://twitter.com/ChristopherA/status/227279835851014144)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/dom/status/227133315319222272)
+
 
 > RT @Dom—Prizemaster @ChristopherA, co-author of SSL, divvies up the iOSDevCamp Hackathon loot. [pic] — [http://path.com/p/1YJCNN](http://path.com/p/1YJCNN)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 23 06:10:07 +0000 2012](https://twitter.com/ChristopherA/status/227284436562104321)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 23 06:10:07 +0000 2012](https://twitter.com/ChristopherA/status/227284436562104321)
 
 ----
 
 > My colleague Shannon Appelcline (@Appelcline) writes about the design of our iPhone/iPad "Web of Power Card Game" [http://bit.ly/MAm4fe](http://bit.ly/MAm4fe)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 23 18:09:09 +0000 2012](https://twitter.com/ChristopherA/status/227465387502088192)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 23 18:09:09 +0000 2012](https://twitter.com/ChristopherA/status/227465387502088192)
 
 ----
 
 > The list of the #iOSDevCamp 2012 winners is now available at [http://bit.ly/Ok0YQa](http://bit.ly/Ok0YQa) — many thanks to all those who joined us last weekend!
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 24 00:53:56 +0000 2012](https://twitter.com/ChristopherA/status/227567256740184064)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 24 00:53:56 +0000 2012](https://twitter.com/ChristopherA/status/227567256740184064)
 
 ----
 
 > Dropped Kalle Alm (@kallewoof) off at SFO—a great two weeks working with him on @InfiniteCanvas &amp; #iOSDevCamp. Thanks! 
 > 
-> ![](../../media/227948859786158080-AynWR77CYAA2cfq.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/227948859786158080-AynWR77CYAA2cfq.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jul 25 02:10:18 +0000 2012](https://twitter.com/ChristopherA/status/227948859786158080)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 25 02:10:18 +0000 2012](https://twitter.com/ChristopherA/status/227948859786158080)
 
 ----
 
@@ -146,19 +152,19 @@ Replying to [@stoweboyd](https://twitter.com/stoweboyd/status/228320130055143424
 
 > Doing the @infinitecanvas app (shipping soon), teaching at BGI, and trying to write a book ;-) Thanks for asking, it is overdue.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 26 03:04:39 +0000 2012](https://twitter.com/ChristopherA/status/228324927235829761)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 26 03:04:39 +0000 2012](https://twitter.com/ChristopherA/status/228324927235829761)
 
 ----
 
 > We are proud that over 29 open source iOS projects were created or presented at #iOSDevCamp 2012. Check out their code! [http://bit.ly/Oqhm1x](http://bit.ly/Oqhm1x)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 26 22:41:24 +0000 2012](https://twitter.com/ChristopherA/status/228621065453187072)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 26 22:41:24 +0000 2012](https://twitter.com/ChristopherA/status/228621065453187072)
 
 ----
 
 > I am seeking to create an archive of photos, videos, screencast demos, etc. from #iOSDevCamp 2012 as well as previous events. Share with me?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 26 22:43:49 +0000 2012](https://twitter.com/ChristopherA/status/228621672926806016)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 26 22:43:49 +0000 2012](https://twitter.com/ChristopherA/status/228621672926806016)
 
 ----
 
@@ -166,7 +172,7 @@ Replying to [@endico](https://twitter.com/endico/status/228623069172887552)
 
 > Thanks — I grabbed all 4 of them, but one named "David Sketching" is only small. Do you still have original?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 26 23:14:18 +0000 2012](https://twitter.com/ChristopherA/status/228629347739787264)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 26 23:14:18 +0000 2012](https://twitter.com/ChristopherA/status/228629347739787264)
 
 ----
 
@@ -174,16 +180,16 @@ Replying to [@endico and @dnsf](https://twitter.com/endico/status/22863612289549
 
 > Oddly, the result from twitpic was 1024 × 1365 pixels
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 27 05:56:30 +0000 2012](https://twitter.com/ChristopherA/status/228730564868452353)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 27 05:56:30 +0000 2012](https://twitter.com/ChristopherA/status/228730564868452353)
 
 ----
 
 > Is a plane? A balloon? No, it’s a blue angel balloon plane! #SeaFair post #BGIedu #sw4sx class. [http://twitpic.com/acy41l](http://twitpic.com/acy41l)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 29 03:37:34 +0000 2012](https://twitter.com/ChristopherA/status/229420373651898368)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 29 03:37:34 +0000 2012](https://twitter.com/ChristopherA/status/229420373651898368)
 
 ----
 
 > I am using Taptu [http://www.taptu.com!](http://www.taptu.com!)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 30 00:28:36 +0000 2012](https://twitter.com/ChristopherA/status/229735208453275648)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 30 00:28:36 +0000 2012](https://twitter.com/ChristopherA/status/229735208453275648)
